test_data/Xml/Unexpected/Unserializable/InvalidClassName/levelType/wrong.xml.exception
Expected an element representing an instance of class LevelType with element name levelType, but got: utterlyInvalid at: the beginning